--- a/application/admin/view/advertisement/index.html
+++ b/application/admin/view/advertisement/index.html
@@ -8,15 +8,15 @@
 <body>
     <div class="x-body">
         <div class="layui-form">
-            <table id="demo" lay-filter="banner"></table>
+            <table id="demo" lay-filter="advertisement"></table>
         </div>
         <script type="text/html" id="toolbarDemo">
             <div class="layui-btn-container">
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
                 </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加轮播图','bannerAdd.html',800,480)">
-                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加轮播图
+                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加广告位','add.html',600,280)">
+                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加广告位
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
@@ -37,36 +37,30 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/banner/index' //数据接口
+            , url: '/admin/advertisement/index' //数据接口
             , page: true //开启分页
             , limit: 20
-            , id: 'banner'
+            , id: 'advertisement'
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left',width:'5%' }
-                    , { field: 'id', title: 'ID', width: '10%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
-                    , { field: 'title', title: '标题', width: '15%' }
-                    , { field: 'img', title: '轮播图', width: '20%',
+                    , { field: 'id', title: '序号', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
+                    , { field: 'id', title: 'ID', width: '15%' }
+                    , { field: 'name', title: '广告位名称'}
+                    , { field: 'status', title: '状态', width: '15%',
                         templet:function(d){
-                            return '<img class="logo-img" src="'+d.thumb+'"/>';
-                        }
-                    }
-                    , { field: 'position_name', title: '轮播位置', width: '15%' }
-                    , { field: 'area', title: '所属站点', width: '15%',
-                        templet:function(d){
-                            var can_used = '总站';
-                            if(d.county){
-                                can_used = d.province_name + '-' + d.city_name + '-' + d.county_name;
+                            if(d.status == '1'){
+                                return '正常';
+                            }else if(d.status == '0'){
+                                return '禁用';
                             }
-                            return can_used;
                         }
                     }
-                    , { field: 'sort', title: '排序', width: '10%', }
                     , { field: 'create_time', title: '创建时间', width: '15%', }
                     , {
                         field: 'handle', title: '操作',width: '10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑轮播图\',\'/admin/banner/bannerEdit?id=' + d.id + '\',800,480);">编辑</button>'+
+                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑广告位\',\'/admin/advertisement/edit?id=' + d.id + '\',600,280);">编辑</button>'+
                             '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
@@ -77,7 +71,7 @@
         /**
          * 监听批量删除 
         */
-        table.on('toolbar(banner)', function (obj) {
+        table.on('toolbar(advertisement)', function (obj) {
             var checkStatus = table.checkStatus(obj.config.id);
             var ids = [];
             switch (obj.event) {
@@ -100,7 +94,7 @@
         } else {
             argument = argument.toString();
             layer.confirm('确认要全部删除吗？', function (index) {
-                $.post('/admin/banner/bannerDel', { id: argument }, function (j) {
+                $.post('/admin/advertisement/del', { id: argument }, function (j) {
                     if (j.code == 200) {
                         layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                             location.reload();
@@ -117,7 +111,7 @@
     */
     function delUser(id) {
         layer.confirm('确认要删除吗？', function (index) {
-            $.post('/admin/banner/bannerDel', { id: id }, function (j) {
+            $.post('/admin/advertisement/del', { id: id }, function (j) {
                 if (j.code == 200) {
                     layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                         location.reload();
