--- a/application/admin/view/banner/banner_edit.html
+++ b/application/admin/view/banner/banner_edit.html
@@ -22,6 +22,17 @@
                 </div>
             </div>
             <div class="layui-form-item">
+                <label class="layui-form-label">轮播位置</label>
+                <div class="layui-input-block">
+                    <select name="position_id" lay-verify="required">
+                        <option value="">请选择</option>
+                        {foreach $position as $key=>$vo}
+                        <option value="{$vo['id']}" {if condition="$vo['id'] == $banner['position_id']"}selected{/if}>{$vo['name']}</option>
+                        {/foreach}
+                    </select>
+                </div>
+            </div>
+            <div class="layui-form-item">
                 <label class="layui-form-label">链接地址</label>
                 <div class="layui-input-block">
                     <input autocomplete="off" class="layui-input" name="url"
@@ -34,6 +45,10 @@
                     <button type="button" class="layui-btn upload-img">
                         <i class="layui-icon">&#xe67c;</i>轮播图
                     </button>
+                    <div style="color: #999;margin-left: 5px;">
+                        <p>(移动端:1000px*390px)</p>
+                        <p>(PC端:1000px*390px)</p>
+                    </div>
                     <img class="layui-upload-img" id="thumb" src="{$banner.thumb}">
                 </div>
             </div>
@@ -63,6 +78,7 @@
                 id:data.field.id,
 				title: data.field.title,
 				thumb: data.field.thumb,
+                position_id:data.field.position_id,
 				sort: data.field.sort,
 				url: data.field.url,
 			};
