--- a/application/admin/view/recommend/data_lis.html
+++ b/application/admin/view/recommend/data_lis.html
@@ -8,15 +8,12 @@
 <body>
     <div class="x-body">
         <div class="layui-form">
-            <table id="demo" lay-filter="banner"></table>
+            <table id="demo" lay-filter="recommend"></table>
         </div>
         <script type="text/html" id="toolbarDemo">
             <div class="layui-btn-container">
                 <button class="layui-btn  layui-btn-sm layui-btn-danger" lay-event="getCheckData">
                     <i class="layui-icon layui-icon-delete"></i>批量删除
-                </button>
-                <button class="layui-btn layui-btn-sm" onclick="x_admin_show('添加轮播图','bannerAdd.html',800,480)">
-                    <i class="layui-icon layui-icon-add-circle-fine"></i>添加轮播图
                 </button>
                 <button class="layui-btn layui-btn-sm" onclick="javascript:location.reload()">
                     <i class="layui-icon layui-icon-refresh"></i>刷新
@@ -37,22 +34,23 @@
             elem: '#demo'
             , toolbar: '#toolbarDemo'
             , defaultToolbar: []
-            , url: '/admin/banner/index' //数据接口
+            , url: '/admin/recommend/dataLis' //数据接口
             , page: true //开启分页
             , limit: 20
-            , id: 'banner'
+            , id: 'recommend'
             , cols: [
                 [ //表头
                     { type: 'checkbox', fixed: 'left',width:'5%' }
-                    , { field: 'id', title: 'ID', width: '10%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
-                    , { field: 'title', title: '标题', width: '15%' }
-                    , { field: 'img', title: '轮播图', width: '20%',
+                    , { field: 'id', title: '序号', width: '5%', fixed: 'left',templet:function(d){return d.LAY_INDEX;}}
+                    , { field: 'id', title: 'ID', width: '5%'}
+                    , { field: 'title', title: '标题', width: '8%' }
+                    , { field: 'img', title: '图片', width: '12%',
                         templet:function(d){
-                            return '<img class="logo-img" src="'+d.thumb+'"/>';
+                            return '<img class="logo-img" src="'+d.img+'"/>';
                         }
                     }
-                    , { field: 'position_name', title: '轮播位置', width: '15%' }
-                    , { field: 'area', title: '所属站点', width: '15%',
+                    , { field: 'recommend_name', title: '推荐位置' }
+                    , { field: 'area', title: '所属站点', width: '10%',
                         templet:function(d){
                             var can_used = '总站';
                             if(d.county){
@@ -61,12 +59,32 @@
                             return can_used;
                         }
                     }
-                    , { field: 'sort', title: '排序', width: '10%', }
-                    , { field: 'create_time', title: '创建时间', width: '15%', }
+                    , { field: 'sort', title: '排序', width: '8%', }
+                    , { field: 'status', title: '状态', width: '8%',
+                        templet:function(d){
+                            if(d.status == '1'){
+                                return '正常';
+                            }else if(d.status == '0'){
+                                return '禁用';
+                            }else if(d.status == '3'){
+                                return '已过期';
+                            }
+                        }
+                    }
+                    , { field: 'end_time', title: '有效期', width: '10%',
+                        templet:function(d){
+                            if(d.end_time){
+                                return d.end_time;
+                            }else{
+                                return '永久';
+                            }
+                        }
+                    }
+                    , { field: 'create_time', title: '创建时间', width: '10%', }
                     , {
                         field: 'handle', title: '操作',width: '10%',
                         templet: function (d) {
-                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑轮播图\',\'/admin/banner/bannerEdit?id=' + d.id + '\',800,480);">编辑</button>'+
+                            var handle = '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑推荐内容\',\'/admin/recommend/dataEdit?id=' + d.id + '\',800,480);">编辑</button>'+
                             '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
@@ -77,7 +95,7 @@
         /**
          * 监听批量删除 
         */
-        table.on('toolbar(banner)', function (obj) {
+        table.on('toolbar(recommend)', function (obj) {
             var checkStatus = table.checkStatus(obj.config.id);
             var ids = [];
             switch (obj.event) {
@@ -100,7 +118,7 @@
         } else {
             argument = argument.toString();
             layer.confirm('确认要全部删除吗？', function (index) {
-                $.post('/admin/banner/bannerDel', { id: argument }, function (j) {
+                $.post('/admin/recommend/dataDel', { id: argument }, function (j) {
                     if (j.code == 200) {
                         layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                             location.reload();
@@ -117,7 +135,7 @@
     */
     function delUser(id) {
         layer.confirm('确认要删除吗？', function (index) {
-            $.post('/admin/banner/bannerDel', { id: id }, function (j) {
+            $.post('/admin/recommend/dataDel', { id: id }, function (j) {
                 if (j.code == 200) {
                     layer.msg('删除成功', { icon: 1, time: 1000 }, function () {
                         location.reload();
