--- a/application/admin/view/shop/index.html
+++ b/application/admin/view/shop/index.html
@@ -83,9 +83,7 @@
                             }else{
                                 var type = '绑定用户';
                             }
-                            handle +='<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\''+type+'\',\'/admin/shop/userAdd?id=' + d.id + '\',800,500);">用户</button>'+
-                            '<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商家\',\'/admin/shop/shopEdit?id=' + d.id + '\',800,480);">编辑</button>'+
-                            '<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
+                            handle +='<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\''+type+'\',\'/admin/shop/userAdd?id=' + d.id + '\',800,500);">用户</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商品分类\',\'/admin/shop/cateLis?id=' + d.id + '\',1000,580);">分类</button>'+'<button type="button" class="layui-btn layui-btn-xs" onclick="x_admin_show(\'编辑商家\',\'/admin/shop/shopEdit?id=' + d.id + '\',800,480);">编辑</button>'+'<button type="button" class="layui-btn layui-btn-normal layui-btn-xs" onclick="x_admin_show(\'商品推送\',\'/admin/shop/recommend?id=' + d.id + '\',800,580);">推送</button>'+'<button type="button" class="layui-btn layui-btn-danger layui-btn-xs" onclick="delUser(' + d.id + ');">删除</button>';
                             return handle;
                         }
                     }
