--- a/application/admin/view/shop_goods/goods_add.html
+++ b/application/admin/view/shop_goods/goods_add.html
@@ -49,6 +49,29 @@
                 </div>
             </div>
             <div class="layui-form-item">
+                <label class="layui-form-label">商铺分类</label>
+                <div class="layui-input-inline">
+                    <select name="self_cate_id"  lay-verify="required">
+                        <option value="">请选择</option>
+                        {volist name='self_cate' id='vo'}
+                            <option value="{$vo.id}">{$vo.cate_name}</option>
+                         {/volist}
+                    </select>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">所属风格</label>
+                <div class="layui-input-block">
+                    <input type="checkbox" name="style[1]" value="1" title="中式" lay-skin="primary" checked>
+                    <input type="checkbox" name="style[2]" value="2" title="欧式" lay-skin="primary" checked>
+                    <input type="checkbox" name="style[3]" value="3" title="现代" lay-skin="primary" checked>
+                    <input type="checkbox" name="style[4]" value="4" title="田园" lay-skin="primary" checked>
+                    <input type="checkbox" name="style[5]" value="5" title="地中海" lay-skin="primary" checked>
+                    <input type="checkbox" name="style[6]" value="6" title="东南亚" lay-skin="primary" checked>
+                    <input type="checkbox" name="style[7]" value="7" title="混搭" lay-skin="primary" checked>
+                </div>
+            </div>
+            <div class="layui-form-item">
                 <label class="layui-form-label">所属品牌</label>
                 <div class="layui-input-block">
                     <select lay-filter="brands" name="brand_id" id="brands_id">
@@ -76,6 +99,12 @@
                 <div class="layui-input-block">
                     <textarea class="layui-textarea" placeholder="请输入商品介绍" id="notice" name="content"
                         style="width: 100%;height: 400px;"></textarea>
+                </div>
+            </div>
+            <div class="layui-form-item">
+                <label class="layui-form-label">是否上架</label>
+                <div class="layui-input-block">
+                  <input type="checkbox" name="online" lay-skin="switch" lay-text="是|否" value="1" checked>
                 </div>
             </div>
             <div class="layui-form-item">
